--- a/spa/spa.html
+++ b/spa/spa.html
@@ -2,35 +2,14 @@
 <html>
   <head>
     <title>SPA</title>
-    <style type="text/css">
-      body {
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
-        background-color: #777;
-      }
-      #spa {
-        position: absolute;
-        top: 8px;
-        left: 8px;
-        bottom: 8px;
-        right: 8px;
-        border-radius: 8px 8px 0 8px;
-        background-color: #fff;
-      }
-      .spa-slider {
-        position: absolute;
-        bottom: 0;
-        right: 2px;
-        width: 300px;
-        height: 16px;
-        cursor: pointer;
-        border-radius: 8px 0 0 0;
-        background-color: #f00;
-      }
-    </style>
-    <script type="text/javascript" src=
-      "http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js">
+    <link rel="stylesheet" href="css/spa.css" type="text/css" />
+    <link rel="stylesheet" href="css/spa.shell.css" type="text/css" />
+    <script src="js/jq/jquery-1.11.3.js"></script>
+    <script src="js/jq/jquery.uriAnchor.js"></script>
+    <script src="js/spa.js"></script>
+    <script src="js/spa.shell.js"></script>
+    <script>
+      $(function () { spa.initModule( $('spa') ); });
     </script>
     <script type="text/javascript">
       // Module /spa/
