spa.js and layout style

--- a/spa/spa.html
+++ b/spa/spa.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>SPA</title>
+    <title>SPA Starter</title>
     <link rel="stylesheet" href="css/spa.css" type="text/css" />
     <link rel="stylesheet" href="css/spa.shell.css" type="text/css" />
     <script src="js/jq/jquery-1.11.3.js"></script>
@@ -11,6 +11,7 @@
     <script>
       $(function () { spa.initModule( $('spa') ); });
     </script>
+    <!--
     <script type="text/javascript">
       // Module /spa/
       var spa = (function ($) {
@@ -69,6 +70,7 @@
         function () { spa.initModule( jQuery('#spa') ); }
       );
     </script>
+    -->
   </head>
   <body>
     <div id="spa"></div>
