feature: dom method and event handler

--- a/spa/layout.html
+++ b/spa/layout.html
@@ -55,6 +55,7 @@
       .spa-x-closed .spa-shell-main-nav {
         width: 0;
       }
+
       .spa-shell-main-content {
         left: 250px;
         right: 0;
@@ -63,13 +64,14 @@
       .spa-x-closed .spa-shell-main-content {
         left: 0;
       }
+
       .spa-shell-foot {
         bottom: 0;
         left: 0;
         right: 0;
         height: 40px;
       }
-      .spa.shell-chat {
+      .spa-shell-chat {
         bottom: 0;
         right: 0;
         width: 300px;
