--- a/spa/spa.html
+++ b/spa/spa.html
@@ -9,68 +9,8 @@
     <script src="js/spa.js"></script>
     <script src="js/spa.shell.js"></script>
     <script>
-      $(function () { spa.initModule( $('spa') ); });
+      $( function () { spa.initModule( $('#spa') ); } );
     </script>
-    <!--
-    <script type="text/javascript">
-      // Module /spa/
-      var spa = (function ($) {
-        // Module scope variables
-          var
-          // Set constants
-          configMap = {
-            extended_height: 434,
-            extended_title: 'Click to retract',
-            retracted_height: 16,
-            retracted_title: 'Click to extend',
-            template_html: '<div class="spa-slider"><\/div>'
-          },
-          // Declare all other module scope variables
-          $chatSlider,
-          toggleSlider, onClickSlider, initModule;
-
-        toggleSlider = function () {
-          var slider_height = $chatSlider.height();
-          if ( slider_height === configMap.retracted_height ) {
-            $chatSlider
-              .animate({ height: configMap.extended_height })
-              .attr({ 'title', configMap.extended_title });
-            return true;
-          }
-          else if ( slider_height === configMap.extended_height ) {
-            $chatSlider
-              .animate({ height: configMap.retracted_height })
-              .attr({ 'title', configMap.retracted_title });
-            return true;
-          }
-
-          //do not take action if slider is in transition
-          return false;
-        };
-
-        onClickSlider = function (event) {
-          toggleSlider();
-          return false;
-        };
-
-        initModule = function ($container) {
-          $container.html( configMap.template_html);
-          $chatSlider = $container.find('.spa-slider');
-          $chatSlider
-            .attr( 'title', configMap.retracted_title )
-            .click( onClickSlider );
-          return true;
-        };
-
-        return { initModule: initModule };
-      }( jQuery ));
-
-      //Start SPA once DOM is ready
-      jQuery(document).ready(
-        function () { spa.initModule( jQuery('#spa') ); }
-      );
-    </script>
-    -->
   </head>
   <body>
     <div id="spa"></div>
