--- a/spa/spa.html
+++ b/spa/spa.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/spa.shell.css" type="text/css" />
     <link rel="stylesheet" href="css/spa.chat.css" type="text/css" />
     <link rel="stylesheet" href="css/spa.avtr.css" type="text/css" />
-    <script src="js/jq/taffydb-2.6.2.js"></script>
+    <script src="js/jq/taffy-min.js"></script>
     <script src="js/jq/jquery-1.11.3.js"></script>
     <script src="js/jq/jquery.uriAnchor.js"></script>
     <script src="js/jq/jquery.event.gevent.js"></script>
