--- a/webapp/public/spa.html
+++ b/webapp/public/spa.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/spa.shell.css" type="text/css" />
     <link rel="stylesheet" href="css/spa.chat.css" type="text/css" />
     <link rel="stylesheet" href="css/spa.avtr.css" type="text/css" />
+    <script src="socket.io/socket.io.js"></script>
     <script src="js/jq/taffy-min.js"></script>
     <script src="js/jq/jquery-1.11.3.js"></script>
     <script src="js/jq/jquery.uriAnchor.js"></script>
